# hackathon

./: App.cpp  App.h  CMakeLists.txt  main.cpp
HackLib/: AppView.cpp  AppView.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  pch.h
SlotMachineLib/: CMakeLists.txt  MachineView.cpp  MachineView.h  MainFrame.cpp  MainFrame.h  SlotMachine.cpp  SlotMachine.h  SlotMachineFactory.cpp  SlotMachineFactory.h  pch.h
